# commelec-api

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  create_build_environments
cmake/: FindCapnProto.cmake
commelec-api/: CMakeLists.txt  adv-validation.hpp  asio-kj-interop.hpp  coroutine-exception.hpp  daemon.cpp  hlapi-internal.hpp  hlapi.cpp  hlapi.h  json.cpp  json.hpp  libhlapi.def  mathfunctions.cpp  mathfunctions.hpp  polynomial-convenience.hpp  polytope-convenience.cpp  polytope-convenience.hpp  realexpr-convenience.hpp  sender-policies.hpp  serialization.cpp  serialization.hpp
commelec-interpreter/: CMakeLists.txt  adv-interpreter-eval.cpp  adv-interpreter-membership.cpp  adv-interpreter-proj.cpp  adv-interpreter-recthull.cpp  adv-interpreter.cpp  adv-interpreter.hpp  boundingbox-convexpolygon.cpp  boundingbox-convexpolygon.hpp
docker/: Dockerfile
docs/: building.md  cross.md  daemon.md  llapi.md  pytutorial.md  schema.md
examples/: demo-resource-agent.py
src/: CMakeLists.txt  hlapi-internal.hpp  hlapi.cpp  hlapi.h  mathfunctions.cpp  mathfunctions.hpp  polynomial-convenience.hpp  polytope-convenience.cpp  polytope-convenience.hpp  realexpr-convenience.hpp  schema.capnp  serialization.cpp  serialization.hpp
tests/: CMakeLists.txt  interpreter.cpp  send-test-advertisement.cpp  send-test-request.cpp
toolchains/: linux-arm-toolchain.cmake  windows-x86-toolchain.cmake
utils/: CMakeLists.txt  visualization_server.cpp  viz-user.py
